Modifying gradle build configuration